--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <a class="name">Floyd Mayweather</a>
         <section class="extra">
           <span class="sport">Boxing</span>
-          <span class="pay">285</span>
+          <span class="pay">285333333</span>
         </section>
       </section>
     </article>
