--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     </article>
 
     <article class="people__person person">
-      <section class="person__photo-img">
+      <section class="person__photo">
         <img
           src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Messi.jpg"
           alt="Lionel Messi"
@@ -45,7 +45,7 @@
     </article>
 
     <article class="people__person person">
-      <section class="person__photo-img">
+      <section class="person__photo">
         <img
           src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Ronaldo.jpg"
           alt="Cristiano Ronaldo"
@@ -63,7 +63,7 @@
     </article>
 
     <article class="people__person person">
-      <section class="person__photo-img">
+      <section class="person__photo">
         <img
           src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/McGregor.jpg"
           alt="Conor McGregor"
@@ -81,7 +81,7 @@
     </article>
 
     <article class="people__person person">
-      <section class="person__photo-img">
+      <section class="person__photo">
         <img
           src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Neymar.jpg"
           alt="Neymar"
@@ -99,7 +99,7 @@
     </article>
 
     <article class="people__person person">
-      <section class="person__photo-img">
+      <section class="person__photo">
         <img
           src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/James.jpg"
           alt="LeBron James"
@@ -117,7 +117,7 @@
     </article>
 
     <article class="people__person person">
-      <section class="person__photo-img">
+      <section class="person__photo">
         <img
           src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Federer.jpg"
           alt="Roger Federer"
@@ -135,7 +135,7 @@
     </article>
 
     <article class="people__person person">
-      <section class="person__photo-img">
+      <section class="person__photo">
         <img
           src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Curry.jpg"
           alt="Stephen Curry"
@@ -153,7 +153,7 @@
     </article>
 
     <article class="people__person person">
-      <section class="person__photo-img">
+      <section class="person__photo">
         <img
           src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Ryan.jpg"
           alt="Matt Ryan"
@@ -171,7 +171,7 @@
     </article>
 
     <article class="people__person person">
-      <section class="person__photo-img">
+      <section class="person__photo">
         <img
           src="https://mate-academy.github.io/fe-program/css/tasks/athletes/people/Stafford.jpg"
           alt="Matthew Stafford"
